# ghengin

./: .gitignore  .gitmodules  .hlint.yaml  BugRepro.hs  CHANGELOG.md  CantReproduce.hs  DISTRIBUTING.md  Makefile  README.md  Setup.hs  TODO  cabal.project  cabal.project.local  ghengin.cabal  linux-shell.nix  shell.nix
examples/: ghengin-games.cabal
examples/book-of-shaders/shaping-functions/: Main.hs  Shaders.hs
examples/book-of-shaders/uniforms/: Main.hs  Shaders.hs
examples/common/: Common.hs
examples/common/Common/: Shader.hs
examples/core/: ghengin-core-games.cabal
examples/core/book-of-shaders/shaping-functions/: Main.hs
examples/core/book-of-shaders/uniforms/: Main.hs
examples/core/dear-imgui/: Main.hs
examples/core/domain-warping/: Main.hs
examples/core/fir-juliaset/: Main.hs
examples/core/full-pipeline/: Main.hs  Shaders.hs
examples/core/function-drawing/: Main.hs  Shaders.hs
examples/core/function-plotting/: Main.hs  Shaders.hs
examples/core/lorenz-attractor/: Main.hs  Shaders.hs
examples/core/mandlebrot-set/: Main.hs  Shaders.hs
examples/core/ocean-waves/: Main.hs  Shaders.hs
examples/core/oscilloscope/: Main.hs  Shaders.hs
examples/core/planets-core/: Main.hs  Planet.hs  Shaders.hs
examples/core/simple-camera/: Main.hs
examples/core/simple-cube/: Main.hs  Shaders.hs
examples/core/simple-triangle/: Main.hs
examples/core/simple-triangle-colored/: Main.hs
examples/core/teapot-obj/: Main.hs
examples/cube/: Main.hs  Shaders.hs
examples/dear-imgui/: Main.hs  Shaders.hs
examples/domain-warping/: Main.hs  Shaders.hs
examples/fir-juliaset/: Main.hs  Shaders.hs
examples/full-pipeline/: Main.hs  Shaders.hs
examples/function-drawing/: Main.hs  Shaders.hs
examples/function-plotting/: Main.hs  Shaders.hs
examples/ghengin/: games.cabal
examples/ghengin/gods-newest-hire/: Main.hs  Planet.hs
examples/ghengin/gods-newest-hire/Planet/: UI.hs
examples/ghengin/planets/Planet/: Noise.hs
examples/lorenz-attractor/: Main.hs  Shaders.hs
examples/mandlebrot-set/: Main.hs  Shaders.hs  TODO
examples/ocean-waves/: Main.hs  Shaders.hs
examples/oscilloscope/: Main.hs  Shaders.hs
examples/planets-core/: Main.hs  Planet.hs  Shaders.hs
examples/planets-core/Planet/: Noise.hs  UI.hs
examples/simple-camera/: Main.hs  Shaders.hs
examples/simple-cube/: Main.hs  Shaders.hs
examples/simple-triangle/: Main.hs  Shaders.hs
examples/simple-triangle-colored/: Main.hs  Shaders.hs
examples/teapot-obj/: Main.hs  Shaders.hs
ghengin/: ghengin.cabal  planets.icns
ghengin-camera/: ghengin-camera.cabal
ghengin-core/: ghengin-core.cabal
ghengin-core/Ghengin/Core/: Material.hs  Mesh.hs  Render.hs  Renderer.hs
ghengin-core/Ghengin/Core/Mesh/: Vertex.hs
ghengin-core/Ghengin/Core/Render/: Monad.hs  Packet.hs  Pipeline.hs  Property.hs
ghengin-core/Ghengin/Core/Renderer/: Buffer.hsig  DescriptorSet.hsig  Kernel.hsig  Pipeline.hsig  RenderPass.hsig  Sampler.hsig  Texture.hsig
ghengin-core/Ghengin/Core/Shader/: Canonical.hs
ghengin-core/Ghengin/Core/Type/: Compatible.hs  Utils.hs
ghengin-core/ghengin-core-indep/Ghengin/Core/: Log.hs  Prelude.hs  Shader.hs
ghengin-core/ghengin-core-indep/Ghengin/Core/Mesh/: Vertex.hs
ghengin-core/ghengin-core-indep/Ghengin/Core/Shader/: Data.hs  Pipeline.hs
ghengin-core/ghengin-core-indep/Ghengin/Core/Type/: Compatible.hs  Sized.hs  Utils.hs
ghengin-core/ghengin-core/Ghengin/: Core.hs
ghengin-core/ghengin-core/Ghengin/Core/: Input.hs  Material.hs  Mesh.hs  Render.hs  Renderer.hs  Renderer.hsig
ghengin-core/ghengin-core/Ghengin/Core/Render/: Packet.hs  Pipeline.hs  Property.hs  Queue.hs
ghengin-core/ghengin-core/Ghengin/Core/Renderer/: Buffer.hsig  Command.hsig  DescriptorSet.hsig  Kernel.hsig  Pipeline.hsig  RenderPass.hsig  Sampler.hsig  Texture.hsig
ghengin-core/ghengin-vulkan/Ghengin/Vulkan/: Renderer.hs
ghengin-core/ghengin-vulkan/Ghengin/Vulkan/Renderer/: Buffer.hs  Buffer.hs-boot  Command.hs  DescriptorSet.hs  DescriptorSet.hs-boot  Device.hs  Frame.hs  ImmediateSubmit.hs  Kernel.hs  (+8 more)
ghengin-core/planets-core/: Camera.hs  Main.hs  Shaders.hs
ghengin-dist-macos/: CHANGELOG.md  ghengin-dist-macos.cabal
ghengin-dist-macos/app/: Main.hs
ghengin-geometry/: CHANGELOG.md  ghengin-geometry.cabal
ghengin-geometry/src/Game/: Geometry.hs
ghengin-geometry/src/Game/Geometry/: Sphere.hs
ghengin-vulkan/: ghengin-vulkan.cabal
ghengin-vulkan/Ghengin/Vulkan/: Renderer.hs
ghengin-vulkan/Ghengin/Vulkan/Renderer/: Buffer.hs  Command.hs  DescriptorSet.hs  DescriptorSet.hs-boot  Device.hs  Frame.hs  Image.hs  ImmediateSubmit.hs  Kernel.hs  Pipeline.hs  RenderPass.hs  Sampler.hs  SwapChain.hs  Synchronization.hs  Texture.hs
ghengin-vulkan/ghengin-vulkan/Ghengin/Vulkan/: Renderer.hs
ghengin/cbits/imgui_extensions/: imgui_color_gradient.cpp
ghengin/ghengin/: Ghengin.hs  Ghengin.hs-boot
ghengin/ghengin-camera/: CHANGELOG.md  ghengin-camera.cabal
ghengin/ghengin-camera/Ghengin/: Camera.hs
ghengin/ghengin-camera/Ghengin/Component/: Camera.hs
ghengin/ghengin-dear-imgui-vulkan/Ghengin/DearImGui/: Vulkan.hs
ghengin/ghengin-dear-imgui/Ghengin/DearImGui/: Backend.hsig  UI.hs
ghengin/ghengin-geometry/Game/Geometry/: Cube.hs  Sphere.hs  Transform.hs
ghengin/ghengin-geometry/Ghengin/: Geometry.hs
ghengin/ghengin-geometry/Ghengin/Geometry/: Cube.hs  Normals.hs  Obj.hs  Sphere.hs  Transform.hs  Vectors.hs
ghengin/ghengin/Ghengin/: DearImGui.hs  Input.hs  Monad.hs  Prelude.hs  Render.hs  Scene.hs  Utils.hs  World.hs  World.hs-boot
ghengin/ghengin/Ghengin/Component/: Camera.hs  Orphans.hs  Transform.hs  UI.hs
ghengin/ghengin/Ghengin/Render/: Queue.hs
ghengin/ghengin/Ghengin/Scene/: Graph.hs
ghengin/ghengin/Ghengin/Shader/: Fixed.hs  Syntactic.hs
ghengin/ocean/: Main.hs  Tutorial.lhs  Tutorial.tex
ghengin/planets/: Main.hs  Planet.hs  Shader.hs
linear-utils/: linear-utils.cabal
linear-utils/Data/IntMap/: Linear.hs
linear-utils/Vulkan/: Linear.hs
linear-utils/linear-utils/Data/IntMap/: Linear.hs
linear-utils/linear-utils/Data/Map/: Linear.hs
(+162 files in other folders)
