cabal-version:      3.4

--------------------------------------------------------------------------------
-- this file is split off from ../ghengin.cabal
-- we had to split these libraries into a different package
-- to fix HLS when using backpack
-- when that's fixed, move the packages back together to the same cabal project file
--------------------------------------------------------------------------------

name:               ghengin-games
tested-with:        GHC ==9.10.1
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       ../LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
category:           Graphics
build-type:         Simple
extra-doc-files:    ../CHANGELOG.md

flag dev
  default: True
  manual: True
  description: This flag controls development settings and should be manually disabled when the game is being built for release. The ghengin packaging tools will take care to set this flag to false when packaging.
               When enabled, vulkan validation layers are enabled.
               Run `cabal build -f-dev` to build with the flag disabled.
               -- Enable with -f+dev

flag debug
  default: False
  manual: True
  description: Linter + Debug mode

common common-flags
  build-depends: generics-sop
  build-depends:
    -- Can't depend on ghengin-core and friends without instancing them because of backpack
    ghengin-core, ghengin-core:vulkan, ghengin:geometry, ghengin-core:backend-independent-bits,
    ghengin:camera, mtl, vector, hsnoise, containers, random, linear-base,
    geomancy, vulkan >= 3.26, time, fir, filepath, text-short,
    vector-sized, base >=4.19.0.0, os-string, gl-block

  if flag(debug)
    ghc-options: -dasm-lint
                 -dcmm-lint
                 -dstg-lint
                 -- -dlint
                 -- -dcore-lint
                 -- -fpolymorphic-specialisation

    cc-options: -DDEBUG
    cpp-options: -DDEBUG
    -- ghc-options: -g2 -rtsopts -debug

  if flag(dev)
    cc-options: -DDEBUG
    cpp-options: -DDEBUG
  else
    ghc-options: -O2
    cc-options: -O2

  ghc-options: -Wall -Wno-partial-type-signatures

  default-extensions: UnicodeSyntax,
                      MultiParamTypeClasses,
                      NoStarIsType,
                      RankNTypes,
                      DataKinds,
                      PolyKinds,
                      GADTs,
                      ViewPatterns,
                      TypeApplications,
                      TypeFamilies,
                      ExplicitNamespaces,
                      TypeFamilyDependencies,
                      TypeOperators,
                      LambdaCase,
                      BlockArguments,
                      RecordWildCards,
                      UnboxedTuples,
                      PatternSynonyms,
                      DisambiguateRecordFields,
                      DeriveGeneric,
                      DerivingVia,
                      DerivingStrategies,
                      LinearTypes,
                      QualifiedDo,
                      QuantifiedConstraints,
                      RoleAnnotations,
                      PostfixOperators,

                      -- Use Ghengin.Core.Prelude!
                      NoImplicitPrelude,

  default-language: GHC2021
  mixins:           ghengin-core
                    requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                             , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                             , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                             , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                             , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                             , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                             , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                             , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                             , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                             )
  -- We need to instance ghengin-geometry too...
  -- That's quite awful? Maybe not... TODO: OPEN A TICKET
  mixins:           ghengin:geometry
                    requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                             , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                             , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                             , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                             , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                             , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                             , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                             , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                             , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                             )

  mixins:         ghengin:camera
                  requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                           , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                           , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                           , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                           , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                           , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                           , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                           , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                           , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                           )

library
  import: common-flags
  exposed-modules: Common, Common.Shader
  hs-source-dirs: common

executable planets-core
    import:        common-flags
    main-is:       Main.hs
    other-modules: Camera, Planet, Shaders
    build-depends: ghengin-games
    hs-source-dirs:   planets-core

executable fir-juliaset
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    build-depends: ghengin-games
    hs-source-dirs:   fir-juliaset

executable mandlebrot-set
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    build-depends: ghengin-games
    hs-source-dirs:   mandlebrot-set

executable domain-warping
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    build-depends: ghengin-games
    hs-source-dirs:   domain-warping

executable ocean-waves
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    build-depends: ghengin-games
    hs-source-dirs: ocean-waves/

executable cube
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    build-depends: ghengin-games
    hs-source-dirs: cube/

--------------------------------------------------------------------------------
-- User level engine
--------------------------------------------------------------------------------

executable simple-triangle
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    build-depends: ghengin-games
    hs-source-dirs: simple-triangle/

executable simple-cube
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    build-depends: ghengin-games
    hs-source-dirs: simple-cube/

executable simple-camera
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    build-depends: ghengin-games
    hs-source-dirs: simple-camera/


