cabal-version:      3.4

--------------------------------------------------------------------------------
-- this file is split off from ../ghengin.cabal
-- we had to split these libraries into a different package
-- to fix HLS when using backpack
-- when that's fixed, move the packages back together to the same cabal project file
--------------------------------------------------------------------------------

name:               ghengin-games
tested-with:        GHC ==9.12.1
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       ../LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
category:           Graphics
build-type:         Simple
extra-doc-files:    ../CHANGELOG.md

flag dev
  default: True
  manual: True
  description: This flag controls development settings and should be manually disabled when the game is being built for release. The ghengin packaging tools will take care to set this flag to false when packaging.
               When enabled, vulkan validation layers are enabled.
               Run `cabal build -f-dev` to build with the flag disabled.
               -- Enable with -f+dev

flag debug
  default: False
  manual: True
  description: Linter + Debug mode

common common-flags
  build-depends: generics-sop
  build-depends:
    -- Can't depend on ghengin-core and friends without instancing them because of backpack
    ghengin-core, ghengin-core:vulkan, ghengin:geometry, ghengin-core:backend-independent-bits,
    ghengin:camera, mtl, vector, hsnoise, containers, random, linear-base,
    geomancy, vulkan >= 3.26, time, fir, filepath, text-short,
    vector-sized, base >=4.19.0.0, os-string, gl-block, GLFW-b, stm,
    reference-counting

  if flag(debug)
    ghc-options: -dasm-lint
                 -dcmm-lint
                 -dstg-lint
                 -- -dlint
                 -- -dcore-lint
                 -- -fpolymorphic-specialisation

    cc-options: -DDEBUG
    cpp-options: -DDEBUG
    -- ghc-options: -g2 -rtsopts -debug

  if flag(dev)
    cc-options: -DDEBUG
    cpp-options: -DDEBUG
  else
    ghc-options: -O2
    cc-options: -O2

  ghc-options: -Wall -Wno-partial-type-signatures

  default-extensions: UnicodeSyntax,
                      MultiParamTypeClasses,
                      NoStarIsType,
                      RankNTypes,
                      DataKinds,
                      PolyKinds,
                      GADTs,
                      ViewPatterns,
                      TypeApplications,
                      TypeFamilies,
                      ExplicitNamespaces,
                      TypeFamilyDependencies,
                      TypeOperators,
                      LambdaCase,
                      BlockArguments,
                      RecordWildCards,
                      UnboxedTuples,
                      PatternSynonyms,
                      DisambiguateRecordFields,
                      DeriveGeneric,
                      DerivingVia,
                      DerivingStrategies,
                      LinearTypes,
                      QualifiedDo,
                      QuantifiedConstraints,
                      RoleAnnotations,
                      PostfixOperators,

                      -- Use Ghengin.Core.Prelude!
                      NoImplicitPrelude,

  default-language: GHC2021
  mixins:           ghengin-core
                    requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                             , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                             , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                             , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                             , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                             , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                             , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                             , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                             , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                             )
  -- We need to instance ghengin-geometry too...
  -- That's quite awful? Maybe not... TODO: OPEN A TICKET
  mixins:           ghengin:geometry
                    requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                             , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                             , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                             , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                             , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                             , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                             , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                             , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                             , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                             )

  mixins:         ghengin:camera
                  requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                           , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                           , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                           , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                           , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                           , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                           , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                           , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                           , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                           )

--------------------------------------------------------------------------------
-- Cooler examples
--------------------------------------------------------------------------------

-- Sebastian Lague's Procedural Planets
executable planets-core
    import:         common-flags
    main-is:        Main.hs
    other-modules:  Planet, Planet.Noise, Planet.UI, Shaders
    hs-source-dirs: planets-core
    build-depends:  ghengin:dear-imgui, JuicyPixels

-- Load and render teapot.obj with blinn-phong
executable teapot-obj
    import:         common-flags
    main-is:        Main.hs
    other-modules:  Shaders
    hs-source-dirs: teapot-obj

--------------------------------------------------------------------------------

-- library
--   import: common-flags
--   exposed-modules: Common, Common.Shader
--   hs-source-dirs: common

-- executable fir-juliaset
--     import:        common-flags
--     main-is:       Main.hs
--     other-modules: Shaders
--     build-depends: ghengin-games
--     hs-source-dirs:   fir-juliaset
-- 
-- executable mandlebrot-set
--     import:        common-flags
--     main-is:       Main.hs
--     other-modules: Shaders
--     build-depends: ghengin-games
--     hs-source-dirs:   mandlebrot-set
-- 
-- executable domain-warping
--     import:        common-flags
--     main-is:       Main.hs
--     other-modules: Shaders
--     build-depends: ghengin-games
--     hs-source-dirs:   domain-warping
-- 
-- executable ocean-waves
--     import:        common-flags
--     main-is:       Main.hs
--     other-modules: Shaders
--     build-depends: ghengin-games
--     hs-source-dirs: ocean-waves/

--------------------------------------------------------------------------------
-- Some demos in increasing level of complexity
--------------------------------------------------------------------------------

executable simple-triangle
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: simple-triangle/

executable simple-triangle-colored
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: simple-triangle-colored/

executable simple-cube
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: simple-cube/

executable simple-camera
    import:        common-flags
    build-depends: template-haskell
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: simple-camera/

executable full-pipeline
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: full-pipeline

-- Neat function drawing on a grid
executable function-drawing
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: function-drawing/

-- DearImGui basic demo
executable dear-imgui
    import:         common-flags
    main-is:        Main.hs
    other-modules:  Shaders
    hs-source-dirs: dear-imgui
    build-depends:  ghengin:dear-imgui

--------------------------------------------------------------------------------
-- Experiments
--------------------------------------------------------------------------------

-- This example is pretty hacked through.
executable function-plotting
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: function-plotting/

-- An XY oscilloscope; TODO: NOT FINISHED
-- executable oscilloscope
--     import:        common-flags
--     main-is:       Main.hs
--     other-modules: Shaders
--     hs-source-dirs: oscilloscope/

-- The Lorenz Attractor
executable lorenz-attractor
    import:        common-flags
    build-depends: template-haskell
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: lorenz-attractor/

--------------------------------------------------------------------------------
-- Examples from The Book Of Shaders https://thebookofshaders.com/
--------------------------------------------------------------------------------

executable book-of-shaders-3
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: book-of-shaders/uniforms/

executable book-of-shaders-5
    import:        common-flags
    main-is:       Main.hs
    other-modules: Shaders
    hs-source-dirs: book-of-shaders/shaping-functions/
