cabal-version:      3.4
name:               ghengin-camera
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ghengin.Component.Camera
    build-depends:    base >=4.19.0.0, ghengin-core, ghengin-core-indep, linear-base, linear-utils, geomancy
    hs-source-dirs:   .
    default-language: GHC2021
    default-extensions:
                    UnicodeSyntax,
                    MultiParamTypeClasses,
                    NoStarIsType,
                    RankNTypes,
                    DataKinds,
                    PolyKinds,
                    GADTs,
                    ViewPatterns,
                    TypeApplications,
                    TypeFamilies,
                    ExplicitNamespaces,
                    TypeFamilyDependencies,
                    TypeOperators,
                    LambdaCase,
                    BlockArguments,
                    RecordWildCards,
                    UnboxedTuples,
                    PatternSynonyms,
                    DisambiguateRecordFields,
                    DeriveGeneric,
                    LinearTypes,
                    QualifiedDo,
                    QuantifiedConstraints,
                    RoleAnnotations,
  
                    -- Use Ghengin.Core.Prelude!
                    NoImplicitPrelude,


